parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@function_def.py-19.snap
---
source: parser/src/lexer/mod.rs
description: "def a[T: U, V: W, *X](): pass"
input_file: parser/test_data/inputs/one_liners/function_def.py
---
[
    Token {
        kind: Def,
        value: None,
        start: 0,
        end: 3,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 4,
        end: 5,
    },
    Token {
        kind: LeftBrace,
        value: None,
        start: 5,
        end: 6,
    },
    Token {
        kind: Identifier,
        value: Str(
            "T",
        ),
        start: 6,
        end: 7,
    },
    Token {
        kind: Colon,
        value: None,
        start: 7,
        end: 8,
    },
    Token {
        kind: Identifier,
        value: Str(
            "U",
        ),
        start: 9,
        end: 10,
    },
    Token {
        kind: Comma,
        value: None,
        start: 10,
        end: 11,
    },
    Token {
        kind: Identifier,
        value: Str(
            "V",
        ),
        start: 12,
        end: 13,
    },
    Token {
        kind: Colon,
        value: None,
        start: 13,
        end: 14,
    },
    Token {
        kind: Identifier,
        value: Str(
            "W",
        ),
        start: 15,
        end: 16,
    },
    Token {
        kind: Comma,
        value: None,
        start: 16,
        end: 17,
    },
    Token {
        kind: Mul,
        value: None,
        start: 18,
        end: 19,
    },
    Token {
        kind: Identifier,
        value: Str(
            "X",
        ),
        start: 19,
        end: 20,
    },
    Token {
        kind: RightBrace,
        value: None,
        start: 20,
        end: 21,
    },
    Token {
        kind: LeftParen,
        value: None,
        start: 21,
        end: 22,
    },
    Token {
        kind: RightParen,
        value: None,
        start: 22,
        end: 23,
    },
    Token {
        kind: Colon,
        value: None,
        start: 23,
        end: 24,
    },
    Token {
        kind: Pass,
        value: None,
        start: 25,
        end: 29,
    },
]
