parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@function_def.py-5.snap
---
source: parser/src/lexer/lexer.rs
description: "def a(a,\nb,\nc): pass"
input_file: parser/test_data/inputs/one_liners/function_def.py
---
[
    Token {
        kind: Def,
        value: None,
        start: 0,
        end: 3,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 4,
        end: 5,
    },
    Token {
        kind: LeftParen,
        value: None,
        start: 5,
        end: 6,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 6,
        end: 7,
    },
    Token {
        kind: Comma,
        value: None,
        start: 7,
        end: 8,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 9,
        end: 10,
    },
    Token {
        kind: Comma,
        value: None,
        start: 10,
        end: 11,
    },
    Token {
        kind: Identifier,
        value: Str(
            "c",
        ),
        start: 12,
        end: 13,
    },
    Token {
        kind: RightParen,
        value: None,
        start: 13,
        end: 14,
    },
    Token {
        kind: Colon,
        value: None,
        start: 14,
        end: 15,
    },
    Token {
        kind: Pass,
        value: None,
        start: 16,
        end: 20,
    },
]
